# utils4

./: .gitignore  .pylintrc  .setup.sh.swp  LICENSE  MANIFEST.in  README.html  README.ipynb  README.md  build.sh  pyproject.toml  release-checklist.rst  requirements.txt  sdist.sh  setup.cfg  setup.py  setup.sh
docs/: Makefile  clean_make_html.cmd  clean_make_html.sh  create.sh  create_linux.sh  make.bat  requirements.txt  update_linux.sh  update_win.sh
docs/source/: cmaps.rst  (+30 more)
pylintr/: LICENSE  README.md  generate_rcfile.sh  pylintr.sh
test/: README  test_all.py  test_config.py  test_get_datafiles.py  test_log.py  test_utils.py  testlist.txt
tests/: .coverage  .coveragerc  base.py  coverage_.bat  run.bat  template.py  test_cmaps.py  test_config.py  test_convert.py  test_crypto.py  test_cutils.py  test_dfdiff.py  test_dict2obj.py  test_filesys.py  test_log.py  test_palette.py  test_progressbar.py  test_pywarnings.py  test_reader.py  test_reporterror.py  test_srccheck.py  test_stats.py  test_timedelta.py  test_utils.py  test_validation.py  test_x_futils.py  test_x_mathfunc.py
utils3/: __init__.py  _version.py  changelog.py  colours.py  config.py  database.py  dict2obj.py  get_datafiles.py  log.py  progressbar.py  pywarnings.py  reader.py  registry.py  reporterror.py  tickers.py  timedelta.py  user_interface.py  utils.py  validation.py
utils3.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
utils4/: __init__.py  _version.py  changelog.py  cmaps.py  config.py  convert.py  crypto.py  cutils.py  dfdiff.py  dict2obj.py  filesys.py  futilsmodule.c  libmfuncmodule.c  log.py  mathfuncmodule.c  palette.py  progressbar.py  pywarnings.py  reader.py  registry.py  reporterror.py  srccheck.py  stats.py  termcolour.py  tickers.py  timedelta.py  user_interface.py  utils.py  validation.py
utils4.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+137 files in other folders)
